--- a/src/locale/zh-TW.json
+++ b/src/locale/zh-TW.json
@@ -1,7 +1,14 @@
 {
   "POPUP": {
     "HEADER_1": "歡迎",
-    "HEADER_2": "歡迎使用%APP_NAME%"
+    "HEADER_2": "歡迎使用％APP_NAME％",
+    "HEADER_BACK_1": "歡迎回來",
+    "HEADER_BACK_2": "歡迎回到％APP_NAME％",
+    "TEXT_1": "第一步",
+    "TEXT_2": "“繼續”您受信任的登錄方法。*<br/>我們會盡快讓您開始。",
+    "TEXT_3": "*您將被重定向以驗證您的帳戶；我們永遠不會看到您的身份驗證方法或密碼。",
+    "TEXT_3_2": "*您將被重定向以驗證您的帳戶；我們永遠不會看到您的身份驗證方法或密碼。一個簡單的是/否就是我們收到的全部信息。儘管某些身份提供商也會傳遞您的姓名。您可以隨時更改身份驗證方法。",
+    "MORE": "更多&gt;&gt;"
   },
   "INCOGNITO": {
     "TITLE": "歡迎"
@@ -11,7 +18,8 @@
     "CONTENT": "您想如何註冊？",
     "CONTENT_2": "使用您的電子郵件註冊",
     "SSO": "或使用您的電子郵件地址和密碼創建一個帳戶",
-    "LOCAL": "使用您的電子郵件地址和密碼創建一個帳戶"
+    "LOCAL": "使用您的電子郵件地址和密碼創建一個帳戶",
+    "OR_LOCAL": "或填寫下面的表格"
   },
   "CONFIRM_EMAIL": {
     "TITLE": "郵件確認",
@@ -69,32 +77,34 @@
     "FORGOT_PASSWORD": "忘記密碼？",
     "NEW_USER": "新的用戶？",
     "SWITCH_LOGIN": "不是你？使用其他電子郵件地址登錄",
-    "SWITCH_REGISTER": "不是你？用其他電子郵件地址註冊。",
+    "SWITCH_REGISTER": "不是你？使用其他電子郵件地址註冊。",
     "SWITCH_TRY": "不是你？嘗試使用其他電子郵件地址。",
     "NEXT": "下一個",
-    "REGISTER": "寄存器",
+    "REGISTER": "註冊",
     "SIGN_IN": "登入",
     "CONFIRM": "確認郵件",
     "OR_CONTINUE_WITH_EMAIL": "或繼續輸入您的電子郵件地址",
     "OR_SIGN_UP_WITH_EMAIL_AND_PASSWORD": "或使用您的電子郵件地址和密碼註冊",
-    "CONTINUE_WITH_EMAIL": "在下面輸入您的電子郵件地址"
+    "CONTINUE_WITH_EMAIL": "或在下面輸入您的電子郵件地址",
+    "MORE_INFO": "更多信息"
   },
   "HOVER": {
     "EMAIL_MATCH": "請確保登錄時使用的電子郵件地址已被邀請註冊。",
-    "NEW_USER": "要訪問該網站，您必須首先被邀請加入。<br/><br/>如果您收到了加入邀請，請單擊該電子郵件中的鏈接以完成註冊。<br/><br/>如果您丟失了該電子郵件，請與最初邀請您的人聯繫。"
+    "NEW_USER": "要訪問該網站，您必須首先被邀請加入。<br/><br/>如果您收到了加入邀請，請單擊該電子郵件中的鏈接以完成註冊。<br/><br/>如果您丟失了該電子郵件，請與最初邀請您的人聯繫。",
+    "MORE_INFO": "我們尊重您的隱私。系統將指導您向您信任的提供者進行身份驗證。"
   },
   "PASSWORD_HINT": {
     "HAS_VALIDATION": "您的密碼必須：",
     "MINIMUM_ONE": "至少包含一個字符",
-    "MINIMUM_MORE": "至少包含%COUNT%個字符",
+    "MINIMUM_MORE": "至少包含％COUNT％個字符",
     "LOWER_ONE": "包含至少一個小寫字母（az）",
-    "LOWER_MORE": "至少包含%COUNT%小寫字母（az）",
+    "LOWER_MORE": "至少包含％COUNT％小寫字母（az）",
     "UPPER_ONE": "包含至少一個大寫字母（AZ）",
-    "UPPER_MORE": "包含至少%COUNT%大寫字母（AZ）",
+    "UPPER_MORE": "包含至少％COUNT％大寫字母（AZ）",
     "SYMBOL_ONE": "包含至少一個符號",
-    "SYMBOL_MORE": "至少包含%COUNT%個符號",
+    "SYMBOL_MORE": "至少包含％COUNT％個符號",
     "NUMBER_ONE": "至少包含一個數字（0-9）",
-    "NUMBER_MORE": "至少包含%COUNT%個數字（0-9）",
+    "NUMBER_MORE": "至少包含％COUNT％個數字（0-9）",
     "NO_EMAIL": "不包含您的姓名或電子郵件地址",
     "MATCH": "在兩個字段中以相同的方式輸入",
     "NO_OLD_PASSWORD": "您的新密碼必須與以前的密碼不同"
@@ -125,7 +135,7 @@
     },
     "PASSWORD_LENGTH": {
       "TITLE": "密碼太短",
-      "MESSAGE": "請輸入超過%COUNT%個字符的密碼",
+      "MESSAGE": "請輸入超過％COUNT％個字符的密碼",
       "CONFIRM": "好"
     },
     "PASSWORD_NOT_MATCH": {
@@ -140,7 +150,7 @@
     },
     "NON_LOCAL_LOGIN": {
       "TITLE": "",
-      "MESSAGE": "您之前已使用%PROVIDER%登錄。請確認您要設置帳戶密碼。",
+      "MESSAGE": "您之前已使用％PROVIDER％登錄。請確認您要設置帳戶密碼。",
       "CONFIRM": "設置密碼",
       "CONFIRM_2": "取消"
     },
@@ -162,5 +172,10 @@
   "RES_MAPPING": {
     "invalid_pin": "請檢查您的PIN碼是否正確",
     "invalid_email_or_password": "請確保您使用的是最新密碼"
+  },
+  "PRIVACY_POLICY": {
+    "CONTENT": "瀏覽我們的網站，即表示您同意我們使用cookie。",
+    "BUTTON_1": "好的",
+    "BUTTON_2": "閱讀我們的政策"
   }
 }
