--- a/src/locale/bg.json
+++ b/src/locale/bg.json
@@ -1,9 +1,9 @@
 {
   "POPUP": {
-    "HEADER_1": "Добре дошли",
-    "HEADER_2": "Добре дошли в %APP_NAME%",
-    "HEADER_BACK_1": "Добре дошъл обратно",
-    "HEADER_BACK_2": "Добре дошли обратно в %APP_NAME%",
+    "HEADER_1": "Влезте за най -доброто си изживяване",
+    "HEADER_2": "Влезте за най -доброто си изживяване",
+    "HEADER_BACK_1": "Влезте за най -доброто си изживяване",
+    "HEADER_BACK_2": "Влезте за най -доброто си изживяване",
     "TEXT_1": "Първа стъпка",
     "TEXT_2": "„Продължете с“ вашия надежден метод за вход. *<br/> Ще започнем за нула време.",
     "TEXT_3": "* Ще бъдете пренасочени за удостоверяване на вашия акаунт; никога не виждаме метода или паролата ви за удостоверяване.",
@@ -86,7 +86,8 @@
     "OR_CONTINUE_WITH_EMAIL": "или продължете с вашия имейл адрес",
     "OR_SIGN_UP_WITH_EMAIL_AND_PASSWORD": "Или се регистрирайте с вашия имейл адрес и парола",
     "CONTINUE_WITH_EMAIL": "или въведете вашия имейл адрес по-долу",
-    "MORE_INFO": "повече информация"
+    "MORE_INFO": "повече информация",
+    "START_WITH_EMAIL_ADDRESS": "Започнете с вашия имейл адрес по -долу"
   },
   "HOVER": {
     "EMAIL_MATCH": "Моля, уверете се, че имейл адресът, който използвате при влизане, е този, който е поканен да се регистрира.",
