--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,9 +1,9 @@
 {
   "POPUP": {
-    "HEADER_1": "Welcome",
-    "HEADER_2": "Welcome to %APP_NAME%",
-    "HEADER_BACK_1": "Welcome back",
-    "HEADER_BACK_2": "Welcome back to %APP_NAME%",
+    "HEADER_1": "Sign in for your best experience",
+    "HEADER_2": "Sign in for your best experience",
+    "HEADER_BACK_1": "Sign in for your best experience",
+    "HEADER_BACK_2": "Sign in for your best experience",
     "TEXT_1": "First step",
     "TEXT_2": "`Continue with’ your trusted login method.*<br/>We'll have you started in no time.",
     "TEXT_3": "*You will be redirected to authenticate your account; we never see your authentication method or password. ",
