--- a/src/locale/bg.json
+++ b/src/locale/bg.json
@@ -36,7 +36,7 @@
   "NEW_CODE": {
     "CONTENT_1": "Не получихте своя ПИН за потвърждение?",
     "CONTENT_2": "Моля, проверете папката си със спам",
-    "CONTENT_OR": "или",
+    "CONTENT_OR": "или ",
     "CONTENT_3": "за нов код",
     "BUTTON": "Натисни тук"
   },
@@ -60,6 +60,14 @@
     "FIRST_NAME": "Първо име",
     "LAST_NAME": "Фамилия",
     "PIN": "ПИН"
+  },
+  "TILE": {
+    "CONTINUE_AS": "Продължете като",
+    "CONTINUE": "продължи",
+    "SIGN_IN": "Впиши се",
+    "WITH": "с",
+    "W_": "w/",
+    "WITH_EMAIL": "Влезте с имейл"
   },
   "BUTTON": {
     "SIGN_IN_METHOD": "Други методи за влизане",
@@ -178,5 +186,10 @@
     "CONTENT": "Разглеждайки нашия уебсайт, вие се съгласявате с използването на бисквитки.",
     "BUTTON_1": "Добре",
     "BUTTON_2": "Прочетете нашата политика"
+  },
+  "TOC_PRIVACY": {
+    "CONTENT_ALL": "С регистрацията, влизането или продължаването си приемам <a href='%TOC_LINK%' target='_blank'>Общите условия</a> и <a href='%PRIVACY_LINK%' target='_blank'>политиката за поверителност на %APP_NAME%</a>",
+    "CONTENT_TOC": "С регистрацията, влизането или продължаването, приемам <a href='%TOC_LINK%' target='_blank'>Общите условия на %APP_NAME%</a>",
+    "CONTENT_PRIVACY": "С регистрацията, влизането или продължаването приемам <a href='%PRIVACY_LINK%' target='_blank'>Декларацията за поверителност на %APP_NAME%</a>"
   }
 }
