--- a/src/locale/es.json
+++ b/src/locale/es.json
@@ -36,7 +36,7 @@
   "NEW_CODE": {
     "CONTENT_1": "¿No recibió su PIN de confirmación?",
     "CONTENT_2": "Por favor revise su carpeta de spam",
-    "CONTENT_OR": "o",
+    "CONTENT_OR": "o ",
     "CONTENT_3": "para un nuevo código",
     "BUTTON": "haga clic aquí"
   },
@@ -60,6 +60,14 @@
     "FIRST_NAME": "Nombre de pila",
     "LAST_NAME": "Apellido",
     "PIN": "ALFILER"
+  },
+  "TILE": {
+    "CONTINUE_AS": "Continuar como",
+    "CONTINUE": "Seguir",
+    "SIGN_IN": "Registrarse",
+    "WITH": "con",
+    "W_": "w/",
+    "WITH_EMAIL": "Iniciar sesión con correo electrónico"
   },
   "BUTTON": {
     "SIGN_IN_METHOD": "Otros métodos de inicio de sesión",
@@ -178,5 +186,10 @@
     "CONTENT": "Al navegar por nuestro sitio web, acepta nuestro uso de cookies.",
     "BUTTON_1": "OK",
     "BUTTON_2": "Lea nuestra política"
+  },
+  "TOC_PRIVACY": {
+    "CONTENT_ALL": "Al registrarme, iniciar sesión o continuar, acepto las <a href='%TOC_LINK%' target='_blank'>Condiciones de servicio</a> y <a href='%PRIVACY_LINK%' target='_blank'>la Política de privacidad de %APP_NAME%</a>",
+    "CONTENT_TOC": "Al registrarme, iniciar sesión o continuar, acepto las <a href='%TOC_LINK%' target='_blank'>Condiciones de servicio de %APP_NAME%</a>",
+    "CONTENT_PRIVACY": "Al registrarme, iniciar sesión o continuar, acepto la <a href='%PRIVACY_LINK%' target='_blank'>Política de privacidad de %APP_NAME%</a>"
   }
 }
