--- a/src/locale/fr.json
+++ b/src/locale/fr.json
@@ -191,5 +191,13 @@
     "CONTENT_ALL": "En m&#39;inscrivant, en me connectant ou en continuant, j&#39;accepte les <a href='%TOC_LINK%' target='_blank'>conditions d&#39;utilisation</a> et la <a href='%PRIVACY_LINK%' target='_blank'>politique de confidentialité de %APP_NAME%</a>",
     "CONTENT_TOC": "En m&#39;inscrivant, en me connectant ou en continuant, j&#39;accepte les <a href='%TOC_LINK%' target='_blank'>conditions d&#39;utilisation de %APP_NAME%</a>",
     "CONTENT_PRIVACY": "En m&#39;inscrivant, en me connectant ou en continuant, j&#39;accepte la <a href='%PRIVACY_LINK%' target='_blank'>politique de confidentialité de %APP_NAME%</a>"
+  },
+  "UI": {
+    "LOGOUT": "Logout",
+    "LOGIN": "Login",
+    "SIGNUP_IN": "Sign up / in",
+    "HELLO": "Hello, %FIRST_NAME%",
+    "SIGN_IN_TITLE": "You are currently signed in as",
+    "SIGN_OUT": "SIGN OUT"
   }
 }
